Bug 15151 - Black screen after loading nouveau module
Summary: Black screen after loading nouveau module
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks: 14885
  Show dependency tree
 
Reported: 2010-01-27 21:38 UTC by Alex Zhavnerchik
Modified: 2010-02-23 21:20 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.33-rc5
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
kernel log (137.15 KB, text/plain)
2010-01-27 21:38 UTC, Alex Zhavnerchik
Details
kernel config (89.95 KB, text/plain)
2010-01-27 21:40 UTC, Alex Zhavnerchik
Details
efifb fix (1019 bytes, patch)
2010-02-02 21:21 UTC, Marcin Slusarz
Details | Diff
efifb fix v2 (1.70 KB, patch)
2010-02-09 20:37 UTC, Marcin Slusarz
Details | Diff

Description Alex Zhavnerchik 2010-01-27 21:38:47 UTC
Created attachment 24747 [details]
kernel log

As mentioned in subj after loading nouveau module I see just black screen. Before today it worked well, I turned off the power and after that it don't show me the image. Firmware on it's place as it was previous time.
Comment 1 Alex Zhavnerchik 2010-01-27 21:40:09 UTC
Created attachment 24748 [details]
kernel config
Comment 2 Andrew Morton 2010-01-28 01:19:24 UTC
What's the most recent kernel version which didn't have this bug?  2.6.32?

Thanks.
Comment 3 Alex Zhavnerchik 2010-01-28 09:39:21 UTC
As mentioned in bugzila's form I caught it on 2.6.33-rc5. And I think that may be something wrong with following line

Jan 27 23:15:00 loki kernel: [   12.449358] fb: conflicting fb hw usage nouveaufb vs EFI VGA - removing generic driver
Comment 4 Andrew Morton 2010-01-28 09:43:34 UTC
I'd like to know which version DIDN'T have the bug!  So we can work out which kernel version regressed.
Comment 5 Alex Zhavnerchik 2010-01-28 10:18:57 UTC
I didn't have this bug on 2.6.33-rc5, it appears only after turning off the
laptop by power button. I can't find anything wrong in log and the system
boots as usual, at least I can login through ssh into it, except black
screen without any image on it.

On Thu, Jan 28, 2010 at 11:43 AM, <bugzilla-daemon@bugzilla.kernel.org>wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=15151
>
>
>
>
>
> --- Comment #4 from Andrew Morton <akpm@linux-foundation.org>  2010-01-28
> 09:43:34 ---
> I'd like to know which version DIDN'T have the bug!  So we can work out
> which
> kernel version regressed.
>
> --
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 6 Marcin Slusarz 2010-01-28 16:16:22 UTC
can someone with sufficient privileges assign this bug to nouveau@lists.freedesktop.org and change the MIME type for attachments to text/plain?
Comment 7 Alan 2010-01-28 16:33:11 UTC
Not unless nouveau@lists.freedesktop.org has an account I'm afraid.

Will fix the attachments
Comment 8 Alex Zhavnerchik 2010-01-30 22:18:40 UTC
I found a solution, actually a man from IRC #nouveau on freenode helped me, there was conflict between nouveaufb and efifb. Now all works, but I think such situations should be provided.
Comment 9 Marcin Slusarz 2010-01-30 22:43:14 UTC
ok, i updated documentation at
http://nouveau.freedesktop.org/wiki/KernelModeSetting
Comment 10 Marcin Slusarz 2010-02-02 21:20:42 UTC
well, it's a bug (in efifb) which should be fixed
can you check whether attached patch fixes your problem completely (with both nouveau and efifb enabled)?
Comment 11 Marcin Slusarz 2010-02-02 21:21:35 UTC
Created attachment 24883 [details]
efifb fix
Comment 12 Alex Zhavnerchik 2010-02-09 09:54:38 UTC
This patch failed when I tried to apply it to 2.6.33-rc7 (I haven't got time
to test it early)

On Tue, Feb 2, 2010 at 11:21 PM, <bugzilla-daemon@bugzilla.kernel.org>wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=15151
>
>
>
>
>
> --- Comment #11 from Marcin Slusarz <marcin.slusarz@gmail.com>  2010-02-02
> 21:21:35 ---
> Created an attachment (id=24883)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> efifb fix
>
> --
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 13 Alex Zhavnerchik 2010-02-09 17:34:09 UTC
Yeah sorry for last post, patch applied correctly, I just mixed up patch
option -p0 instead of -p1 when tried to apply it

On Tue, Feb 9, 2010 at 11:54 AM, <bugzilla-daemon@bugzilla.kernel.org>wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=15151
>
>
>
>
>
> --- Comment #12 from Alex Zhavnerchik <alex.vizor@gmail.com>  2010-02-09
> 09:54:38 ---
> This patch failed when I tried to apply it to 2.6.33-rc7 (I haven't got
> time
> to test it early)
>
> On Tue, Feb 2, 2010 at 11:21 PM, <bugzilla-daemon@bugzilla.kernel.org
> >wrote:
>
> > http://bugzilla.kernel.org/show_bug.cgi?id=15151
> >
> >
> >
> >
> >
> > --- Comment #11 from Marcin Slusarz <marcin.slusarz@gmail.com>
>  2010-02-02
> > 21:21:35 ---
> > Created an attachment (id=24883)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> >  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> > efifb fix
> >
> > --
> > Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> > ------- You are receiving this mail because: -------
> > You reported the bug.
> >
>
> --
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 14 Alex Zhavnerchik 2010-02-09 17:46:31 UTC
I recompiled the kernel with this patch and it works, thx a lot :)

On Tue, Feb 9, 2010 at 7:34 PM, <bugzilla-daemon@bugzilla.kernel.org> wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=15151
>
>
>
>
>
> --- Comment #13 from Alex Zhavnerchik <alex.vizor@gmail.com>  2010-02-09
> 17:34:09 ---
> Yeah sorry for last post, patch applied correctly, I just mixed up patch
> option -p0 instead of -p1 when tried to apply it
>
> On Tue, Feb 9, 2010 at 11:54 AM, <bugzilla-daemon@bugzilla.kernel.org
> >wrote:
>
> > http://bugzilla.kernel.org/show_bug.cgi?id=15151
> >
> >
> >
> >
> >
> > --- Comment #12 from Alex Zhavnerchik <alex.vizor@gmail.com>  2010-02-09
> > 09:54:38 ---
> > This patch failed when I tried to apply it to 2.6.33-rc7 (I haven't got
> > time
> > to test it early)
> >
> > On Tue, Feb 2, 2010 at 11:21 PM, <bugzilla-daemon@bugzilla.kernel.org
> > >wrote:
> >
> > > http://bugzilla.kernel.org/show_bug.cgi?id=15151
> > >
> > >
> > >
> > >
> > >
> > > --- Comment #11 from Marcin Slusarz <marcin.slusarz@gmail.com>
> >  2010-02-02
> > > 21:21:35 ---
> > > Created an attachment (id=24883)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> >  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> > >  --> (http://bugzilla.kernel.org/attachment.cgi?id=24883)
> > > efifb fix
> > >
> > > --
> > > Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> > > ------- You are receiving this mail because: -------
> > > You reported the bug.
> > >
> >
> > --
> > Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> > ------- You are receiving this mail because: -------
> > You reported the bug.
> >
>
> --
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 15 Marcin Slusarz 2010-02-09 20:37:09 UTC
Created attachment 24977 [details]
efifb fix v2

i just noticed one more bug, please retest the new patch
Comment 16 Alex Zhavnerchik 2010-02-10 08:31:06 UTC
Second patch works for me also

On Tue, Feb 9, 2010 at 10:37 PM, <bugzilla-daemon@bugzilla.kernel.org>wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=15151
>
>
> Marcin Slusarz <marcin.slusarz@gmail.com> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>  Attachment #24883 [details]|0                           |1
>        is obsolete|                            |
>
>
>
>
> --- Comment #15 from Marcin Slusarz <marcin.slusarz@gmail.com>  2010-02-09
> 20:37:09 ---
> Created an attachment (id=24977)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=24977)
> efifb fix v2
>
> i just noticed one more bug, please retest the new patch
>
> --
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 17 Alex Zhavnerchik 2010-02-12 23:01:54 UTC
Is this patch in 2.6.33-rc8?
Comment 18 Alex Zhavnerchik 2010-02-15 12:31:12 UTC
So, as men from #nouveau at freenode informed me, this ticket should be assigned to efifb maintainer, can anybody assign it to relevant maintainer and give me maintainer's email to add his to CC
Comment 19 Alan 2010-02-15 13:11:47 UTC
efifb doesn't seem to have a live maintainer. Marcin can you just kick that patch upstream directly.

(reoepend as it doesn't seem to be upstream yet)
Comment 20 Marcin Slusarz 2010-02-15 19:49:55 UTC
i sent it to akpm few days ago (with hopefully right cc's) - can't do anything more...
Comment 21 Rafael J. Wysocki 2010-02-21 21:30:15 UTC
Handled-By : Marcin Slusarz <marcin.slusarz@gmail.com>
Patch : http://bugzilla.kernel.org/attachment.cgi?id=24977
Comment 22 Marcin Slusarz 2010-02-23 20:31:35 UTC
today this patch hit Linus' tree (commit 89f3f2199084a160a3a45fa6d9af235696321758) - please close this bug
Comment 23 Rafael J. Wysocki 2010-02-23 21:20:14 UTC
Closing.

Note You need to log in before you can comment on or make changes to this bug.